<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                app:srcCompat="@drawable/avion" />

            <EditText
                android:id="@+id/idNombrePasajeroA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/pasajero"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/idtelefonoA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/idPrecioBoletoA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/precio"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_pagoA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_marginTop="24dp"
                android:text="@string/pago"/>

            <Spinner
                android:id="@+id/idFormaPagoA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp" />

            <EditText
                android:id="@+id/idCodigoVueloA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/codigo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/idNumVueloA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/vuelo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/idNumAsientoA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/asiento"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_origenA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/origen"/>

            <Spinner
                android:id="@+id/idOrigenA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tv_destinoA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/destino"/>

            <Spinner
                android:id="@+id/idDestinoA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:padding="20dp" />


            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/boton_redondear"
                android:text="@string/actualizar"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idPassword" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>